@@ -1,5 +1,8 @@
 2009-12-22  Torbjorn Granlund  <tege@gmplib.org>
 
+	* mpn/generic/mu_bdiv_q.c (mpn_mu_bdiv_q_itch): Rewrite.
+	* mpn/generic/mu_bdiv_qr.c (mpn_mu_bdiv_qr_itch): Simplify.
+
 	* mpn/generic/bdiv_qr.c (mpn_bdiv_qr): Simplify, don't allocate.
 	(mpn_bdiv_qr_itch): Conditionalise on MU_BDIV_QR_THRESHOLD.
 
